--- a/css/uwtadmissions.css
+++ b/css/uwtadmissions.css
@@ -366,7 +366,7 @@ html.lt-ie9 html #main {
     width: 100%;
     top: 90px;
     left: 0px;
-    z-index: 1;
+    z-index: 2;
     background-color: #4b2e84;
     height: 50px;
     /* The overall height of the main purple menu */
@@ -788,7 +788,7 @@ html.lt-ie9 html #navigation {
   width: 100%;
   top: 90px;
   left: 0px;
-  z-index: 1;
+  z-index: 2;
   background-color: #4b2e84;
   height: 50px;
   /* The overall height of the main purple menu */
