--- a/sass/_bp_widest.scss
+++ b/sass/_bp_widest.scss
@@ -224,7 +224,7 @@
     width:100%;
     top:90px;
     left: 0px;
-    z-index:1;
+    z-index:2;
     background-color:$purple;
     height: 50px; /* The overall height of the main purple menu */
     .region-navigation{
